--- a/src/App.css
+++ b/src/App.css
@@ -102,7 +102,7 @@ textarea {
 }
 
 
-.readmore-btn, .create-review {
+.readmore-btn, .create-review, .edit, .delete {
   background: none!important;
   border: none;
   padding: 0!important;
@@ -127,4 +127,49 @@ textarea {
 
 .review-data{
   text-align: left;
+}
+
+.cart-btns{
+
+  border: none;
+  outline: 0;
+  padding: 12px;
+  color: white;
+  background-color: #000;
+  text-align: center;
+  cursor: pointer;
+  font-size: 18px;
+  margin-left: 10px;
+}
+
+.cart-btns:hover{
+  background-color: rgb(25, 17, 68);
+}
+
+.product-card , .image{
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    max-width: 300px;
+    margin: auto;
+    text-align: center;
+    font-family: arial;
+
+}
+
+.product-card:hover{
+  -ms-transform: scale(1.3); /* IE 9 */
+  -webkit-transform: scale(1.3); /* Safari 3-8 */
+  transform: scale(1.2); 
+}
+
+
+
+.image:hover{
+  -ms-transform: scale(1.3); /* IE 9 */
+  -webkit-transform: scale(1.3); /* Safari 3-8 */
+  transform: scale(1.2); 
+}
+
+.cart{
+  text-align: left;
+  margin-left: 70px;
 }
