Cart Almost Done

--- a/src/App.css
+++ b/src/App.css
@@ -152,6 +152,7 @@ textarea {
     margin: auto;
     text-align: center;
     font-family: arial;
+    background-color: rgb(194, 241, 241);
 
 }
 
