Reviews Delete, Edit, and Filter fixed

--- a/src/App.css
+++ b/src/App.css
@@ -197,3 +197,15 @@ textarea {
   text-align: center;
 }
 
+
+.favorites-section{
+  text-align: left;
+  margin-left: 75px;
+}
+
+.favorites-btn{
+  border: none
+}
+.favorites-btn:hover{
+  cursor: pointer
+}
