--- a/src/App.css
+++ b/src/App.css
@@ -148,6 +148,7 @@ textarea {
 
 .product-card , .image{
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  height: 105%;
     max-width: 300px;
     margin: auto;
     text-align: center;
@@ -208,4 +209,44 @@ textarea {
 }
 .favorites-btn:hover{
   cursor: pointer
+}
+
+
+input[type=text] {
+  width: 50%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+
+input[type=submit] {
+  width: 30%;
+  background-color: #4CAF50;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+
+.Review-Form{
+  border-radius: 5px;
+  background-color: #d7ddef;
+  padding: 20px;
+}
+
+select {
+  width: 10%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+
 }
