--- a/src/App.css
+++ b/src/App.css
@@ -47,6 +47,7 @@
 .products{
   display: grid;
   grid-template-columns: repeat(4, 2fr);
+  grid-row-gap: 50px;
 }
 
 .image{
@@ -235,7 +236,7 @@ input[type=submit] {
 }
 
 
-.Review-Form{
+.new-form{
   border-radius: 5px;
   background-color: #d7ddef;
   padding: 20px;
