--- a/src/App.css
+++ b/src/App.css
@@ -180,8 +180,17 @@ textarea {
 
 .Navigation{
   border: rgb(0, 0, 0) 1px solid;
-  background-color: rgb(79, 119, 189);
+  background-color: rgb(26, 26, 28);
+  display: grid;
+  grid-template-columns: repeat(2, 2fr);
+  grid-column-gap: 50%;
+  height: 90px
 }
+
+/* .new-product{
+  margin-top: 20px;
+} */
+
 
 .cart-images{
   width:100px;
@@ -251,3 +260,46 @@ select {
   border-radius: 5px;
 
 }
+
+
+.dropbtn {
+  background-color: rgb(26, 26, 28);
+  color: white;
+  padding: 16px;
+  font-size: 28px;
+  border: none;
+
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.items{
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 90px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+
+
+}
+
+.items a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.items a:hover {background-color: #ddd;}
+
+.dropdown:hover .items {display: block;}
+
+.dropdown:hover .dropbtn {
+  background-color: rgb(26, 26, 28);
+  cursor: pointer;
+}
+
