--- a/src/App.css
+++ b/src/App.css
@@ -4,22 +4,29 @@
 
 
 .images{
-  height: 180px;
-  width: 180px;
+  height: 500px;
+  width: 300px;
   margin-top: 5px;
 }
 
 
 .products{
-  display: grid;
-  grid-template-columns: repeat(4, 2fr);
-  grid-row-gap: 50px;
+  text-align: left;
+  margin-left: 15%;
+  margin-top: 5%;
 }
 
 .image{
-  height: px;
-  width: 180px;
+  height: 300px;
+  width: 200px;
 }
+
+.product-image{
+  margin-top: 5px;
+  height: 150px;
+  width: 100px;
+}
+
 
 .image-container{
   text-align: left;
@@ -115,8 +122,8 @@ textarea {
 
 .product-card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  height: 105%;
-    max-width: 300px;
+  height: 90%;
+    max-width: 200px;
     margin: auto;
     text-align: center;
     font-family: arial;
@@ -126,16 +133,16 @@ textarea {
 }
 
 .product-card:hover{
-  -ms-transform: scale(1.1); /* IE 9 */
-  -webkit-transform: scale(1.1); /* Safari 3-8 */
+  -ms-transform: scale(1.1); 
+  -webkit-transform: scale(1.1); 
   transform: scale(1.1); 
 }
 
 
 
 .image:hover{
-  -ms-transform: scale(1.3); /* IE 9 */
-  -webkit-transform: scale(1.3); /* Safari 3-8 */
+  -ms-transform: scale(1.3); 
+  -webkit-transform: scale(1.3); 
   transform: scale(1.2); 
 }
 
@@ -149,8 +156,7 @@ textarea {
   border:rgb(26, 26, 28);
   background-color: rgb(26, 26, 28);
   display: grid;
-  grid-template-columns: repeat(2, 2fr);
-  grid-column-gap: 50%;
+  grid-template-columns: repeat(3, 35%);
   height: 90px
 }
 
@@ -239,6 +245,7 @@ select {
 }
 
 .dropdown {
+  margin-top: 10px;
   position: relative;
   display: inline-block;
 }
@@ -274,4 +281,34 @@ select {
 .cart-details{
   display: grid;
   grid-template-columns: repeat(2, 34%);
+}
+
+
+.pagination{
+  text-align: center;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 15px);
+  color:  #002D62;
+  cursor: pointer;
+  list-style: none;
+}
+
+.landing-products{
+  display: grid;
+  grid-template-columns: repeat(2, 40%);
+}
+
+.page-count{
+  margin-left: 12%;
+}
+
+.Nav-Category{
+  display: grid;
+  grid-template-columns: repeat(4, 30%);
+  margin-top: 30px;
+}
+
+.product-category{
+  color: white;
+  font-size: 20px;
 }
