--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,9 @@
   height: 500px;
   width: 300px;
   margin-top: 5px;
+  
+  padding: 10px;
+  box-shadow: 5px 8px #888888;
 }
 
 
@@ -120,7 +123,7 @@ textarea {
   background-color: rgb(25, 17, 68);
 }
 
-.product-card {
+/* .product-card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   height: 90%;
     max-width: 200px;
@@ -129,14 +132,13 @@ textarea {
     font-family: arial;
     color: white;
     background-color: rgb(19, 26, 26);
-
 }
 
 .product-card:hover{
   -ms-transform: scale(1.1); 
   -webkit-transform: scale(1.1); 
   transform: scale(1.1); 
-}
+} */
 
 
 
@@ -311,4 +313,20 @@ select {
 .product-category{
   color: white;
   font-size: 20px;
+}
+
+
+.product-card{
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-row-gap: 20px;
+}
+
+.favorite-images{
+  height: 200px;
+  width: 150px;
+}
+
+.favorite-card{
+  margin-left: 10px;
 }
