--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+  .App {
   text-align: center;
 }
 
@@ -123,24 +123,6 @@ textarea {
   background-color: rgb(25, 17, 68);
 }
 
-/* .product-card {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  height: 90%;
-    max-width: 200px;
-    margin: auto;
-    text-align: center;
-    font-family: arial;
-    color: white;
-    background-color: rgb(19, 26, 26);
-}
-
-.product-card:hover{
-  -ms-transform: scale(1.1); 
-  -webkit-transform: scale(1.1); 
-  transform: scale(1.1); 
-} */
-
-
 
 .image:hover{
   -ms-transform: scale(1.3); 
@@ -158,7 +140,7 @@ textarea {
   border:rgb(26, 26, 28);
   background-color: rgb(26, 26, 28);
   display: grid;
-  grid-template-columns: repeat(3, 35%);
+  grid-template-columns: repeat(4, 25%);
   height: 90px
 }
 
@@ -307,7 +289,7 @@ select {
 
 .Nav-Category{
   display: grid;
-  grid-template-columns: repeat(4, 30%);
+  grid-template-columns: repeat(4, 32%);
   margin-top: 30px;
 }
 
@@ -330,4 +312,53 @@ select {
 
 .favorite-card{
   margin-left: 10px;
+}
+
+.searchInputs{
+  margin-top: 20px;
+  display: flex;
+}
+
+
+.search .searchbar{
+  border: 0px;
+  border-radius: 2px;
+  border-top-right-radius: 0px;
+  border-bottom-right-radius: 0px;
+  font-size: 18px;
+  padding: 15px;
+  height: 30px;
+  width: 200px
+}
+
+.searchIcon{
+  background-color: white;
+  height: 30px;
+  margin-top: 8px;
+  display: grid;
+  place-items: center;
+  border-left: #000 1px solid;
+}
+
+.dataResult{
+  margin-top: 5px;
+  width: 300px;
+  height: 200px;
+  border: #000 1px solid;
+  background-color: white;
+  overflow: hidden;
+  overflow-y: auto;
+  position: absolute;
+}
+
+.search-link:hover{
+  background-color: gray;
+}
+
+/* .dropdown-link{
+margin-left: 10px;
+} */
+
+a{
+  text-decoration: none;
 }
