--- a/src/App.css
+++ b/src/App.css
@@ -74,6 +74,10 @@
 }
 
 
+.home-page-link{
+  margin-top: 25px;
+}
+
 textarea {
   display: block;
   width: 90%;
@@ -90,6 +94,9 @@ textarea {
   text-decoration: underline;
   cursor: pointer;
 }
+
+
+
 
 .review-title{
   white-space: nowrap;
