--- a/src/App.css
+++ b/src/App.css
@@ -190,7 +190,7 @@ textarea {
 }
 
 
-input[type=text] {
+input[type=text] , input[type=password], input[type=email]{
   width: 50%;
   padding: 12px 20px;
   margin: 8px 0;
@@ -199,6 +199,7 @@ input[type=text] {
   border-radius: 4px;
   box-sizing: border-box;
 }
+
 
 
 input[type=submit] {
