--- a/src/App.css
+++ b/src/App.css
@@ -445,7 +445,27 @@ width: 75px;
 	border-top: 1px solid #819efc;
 }
 
+.userDetails{
+  display: grid;
+  grid-template-columns: repeat(3, 400px);
+}
 
+.vertical {
+  top: 0;
+  bottom: 0;
+  display: inline-block;
+  border-left: 5px solid #ccc;
+  margin: 0 10px;
+  height: 100vh;
+}
+
+.userLink{
+  margin-top: 30px;
+}
+
+.userInfo{
+  margin-right: 40px;
+}
 
 @media all and (max-width: 375px){
   .Navigation{
