--- a/src/Components/Darkmode/Darkmode.css
+++ b/src/Components/Darkmode/Darkmode.css
@@ -26,7 +26,7 @@ a{
     width: 50px;
     height: 30px;
     border-radius: 25px;
-    background-color:gainsboro;
+    background-color:rgb(220, 220, 220);
     transition: background .3s;
     outline: none;
     cursor: pointer;
@@ -47,18 +47,13 @@ a{
   }
   
   .toggle:checked{
-    background-color: gainsboro;
+    background-color: black;
   }
   
   .toggle:checked:after{
     left:70%
   }
   
-  .darkmode{
-    display: grid;
-    grid-template-columns: repeat(3, 15pt);
-    margin-top: 5px;
-  }
   
   .moon{
     margin-left: 35px
