--- a/src/App.css
+++ b/src/App.css
@@ -34,6 +34,7 @@
 
 
 .image-container{
+
   text-align: left;
   margin-left: 80px;
 }
@@ -465,6 +466,16 @@ width: 75px;
 
 .userInfo{
   margin-right: 40px;
+}
+
+
+.cart-counter-input{
+  text-align: left;
+  margin-left: 80px;
+}
+
+.cart-input{
+  width: 30px;
 }
 
 @media all and (max-width: 375px){
