Footer removed and sort featured added in products page

--- a/src/App.css
+++ b/src/App.css
@@ -313,6 +313,12 @@ select {
   font-size: 20px;
 }
 
+.product-category:hover , .dropbtn:hover{
+  color: cornflowerblue
+}
+
+
+
 
 .product-card{
   display: grid;
