--- a/src/App.css
+++ b/src/App.css
@@ -24,18 +24,18 @@ hr{
   margin-top: 5px;
   
   padding: 10px;
-  box-shadow: 5px 8px #888888;
+  box-shadow: 5px 8px #000000;
 }
 
 
 .product{
   height: 120%;
   width: 70%;
-  border: 1px solid white;
+  border: 2px solid white;
   background-color: white;
   border-radius: 10%;
   margin-left: 50px;
-  box-shadow: 2px 2px 4px #000000;
+  box-shadow: 2px 2px #000000;
 }
 
 .image{
@@ -374,7 +374,7 @@ select {
   width: 80%;
   height: 110%;
   box-shadow: 2px 2px 4px #000000;
-
+  border-radius: 5px;
 }
 
 
