--- a/src/App.css
+++ b/src/App.css
@@ -109,6 +109,7 @@ input:required:invalid {
   text-align: center;
   height: 50px;
   width: 200px;
+  cursor: pointer;
 }
 
 hr{
@@ -228,6 +229,16 @@ textarea {
   margin-right: 46.5%;
   
 }
+
+.readmore{
+  line-height: 1.3;
+  padding: 20px;
+  text-align: justify;
+  font-size: 15px;
+  font-weight: bold;
+  margin-left: 23px;
+}
+
 
 .readmore-btn, .create-review, .edit, .delete , .registory-btn, .sign-btn{
   background: none!important;
@@ -439,6 +450,7 @@ select {
   position: relative;
   display: inline-block;
   margin-left: 80px;
+  height: 100px;
 }
 
 .items{
@@ -447,9 +459,7 @@ select {
   margin-right: 10px;
   background-color: #f1f1f1;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-
-
-
+  height: 100px
 }
 
 .items a {
