--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,14 @@
 }
 
 
+.buy-again{
+  border: none;
+  color: white;
+  background-color: black;
+  height: 28px;
+  cursor: pointer;
+}
+
 .delete-btn{
   margin-left: 90%;
   margin-top: 5px;
@@ -59,7 +67,7 @@
   display: flex;
   justify-content: center;
   display: grid;
-  grid-template-columns: repeat(2, 28%);
+  grid-template-columns: repeat(3, 28%);
 }
 
 
@@ -140,7 +148,7 @@ hr{
 }
 
 .product{
-  height: 120%;
+  height: 100%;
   width: 70%;
   border: 2px solid white;
   background-color: white;
