--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,30 @@
   grid-template-columns: repeat(2, 1fr);
 }
 
+.landing-page{
+  background-color: azure;
+  margin-left: 50px;
+  margin-right: 50px;
+}
 
+.border-products{
+  margin-top: 60px;
+  display: grid;
+  grid-template-columns: repeat(3, 20%);
+  grid-column-gap: 10px;
+}
+
+.selected-image{
+  height: 150px;
+  width: 120px;
+}
+
+.landing-page{
+  display: grid;
+
+  grid-template-columns: repeat(2, 1fr);
+  grid-column-gap: 100px;
+}
 
 
 .buy-again{
@@ -49,14 +72,21 @@
 }
 
 .category-description {
-  line-height: 1.3;
+  line-height: 1.5;
   padding: 20px;
   text-align: justify;
   font-size: 12px;
   font-weight: bold;
-  margin-left: 23px;
+  margin-left: 100px;
 }
 
+
+.landing-header{
+  text-align: justify;
+  margin-left: 100px;
+  padding: 20px;
+
+}
 
 .collection-name{
   display: flex;
@@ -75,7 +105,7 @@
 
 
 .category-buttons{
-  margin-right: 215px;
+  margin-right: 270px;
   border: none;
   color: white;
   background-color: #000;
@@ -131,14 +161,6 @@ hr{
   background-color: #333;  /* Modern Browsers */
 }
 
-.images{
-  height: 220px;
-  width: 180px;
-  margin-top: 5px;
-  padding: 10px;
-  /* box-shadow: 2px 1px 2px 2px #000000; */
-}
-
 
 .history-box{
   display: grid;
@@ -165,9 +187,7 @@ hr{
   width: 200px;
 }
 
-.product-name , .product-price{
-  white-space: nowrap;
-}
+
 
 .product-image{
   margin-top: 10px;
@@ -509,24 +529,22 @@ select {
 }
 
 
+.paginations{
+  text-align: center;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 15px);
+  color:  #002D62;
+  cursor: pointer;
+  list-style: none;
+  margin-left: 8px;
+}
+
+
+
 .eye{
   padding-right: 5px
 }
 
-.landing-products{
-  display: grid;
-  grid-template-columns: 45% 5%
-}
-
-
-.landing-page{
-  border: black solid 2px;
-  height: 400px
-}
-
-.page-count{
-  margin-left: 12%;
-}
 
 .Nav-Category{
   display: grid;
@@ -600,7 +618,7 @@ select {
   margin-bottom: 40px;
   margin-top: 80px;
   text-align: center;
-  margin-left: 600px;
+  margin-left: 630px;
   position: absolute
 }
 
@@ -737,6 +755,28 @@ width: 75px;
   text-align: left;
   margin-left: 80px;
 }
+
+
+
+.cart-counter-input{
+  border: #000 1px solid;
+  margin-right: 87.9%
+}
+
+.decrease-increase{
+  background-color: white;
+}
+
+
+.decrease-increase{
+  border: none;
+
+}
+
+.cart-input{
+  border: none;
+}
+
 
 .cart-input{
   width: 40px;
@@ -878,7 +918,7 @@ ul{
 footer{
   border: black solid 1px;
   background-color: black;
-  height: 90%
+  height: 100%
 }
 
 
